# fallacy-detector-ai

./: .env.example  .gitignore  README.md  example.py  pyproject.toml
data/: fallacies.csv
fallacy_detector/: __init__.py  __main__.py  analyzer.py  config.py  prompts.py  utils.py
tests/: test_analyzer.py
